B-68612 Tech Debt: FDA: replace Collections.emptyList() by List.of() in packages dist-foreign-integration, dist-foreign-repository, dist-foreign-service