@@ -27,7 +27,6 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -98,7 +97,7 @@ public class AclciUsageService implements IAclciUsageService {
     public List<Usage> getUsagesByIds(List<String> usageIds) {
         return CollectionUtils.isNotEmpty(usageIds)
             ? aclciUsageRepository.findByIds(usageIds)
-            : Collections.emptyList();
+            : List.of();
     }
 
     @Override
@@ -110,7 +109,7 @@ public class AclciUsageService implements IAclciUsageService {
     public List<UsageDto> getUsageDtos(UsageFilter filter, Pageable pageable, Sort sort) {
         return !filter.isEmpty()
             ? aclciUsageRepository.findDtosByFilter(filter, pageable, sort)
-            : Collections.emptyList();
+            : List.of();
     }
 
     @Override
